# obidome

./: .gitignore  LICENSE  README.md  main.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/obidome/: __init__.py  log_window.py  main.py  monitor.py  plot.py  settings.py  settings_window.py  values.py
